4.1.8
	+ Upgrade kernel also when upgrading to 4.2
4.1.7
	+ Improvements in RESTClient
4.1.6
	+ Upgrade to Zentyal 4.2 button in dashboard
	+ Set proper motd after edition name changes
	+ Avoid XSS on search when entering JS code
4.1.5
	+ Fix possible redis corruption when deleting data table rows
	  with ids sharing the same prefix
4.1.4
	+ Remove non-numeric value warning in data table size control
	+ Added skip-lock-tables, quick and single-transaction parameters to
	  mysqldump command when dumping databases
4.1.3
	+ Added JS function Zentyal.escapeHTTPQuery
4.1.2
	+ New commercial edition
4.1.1
	+ Use POST method when submitting forms in AJAX requests
	+ Added missing table-helper.js dependency to treeView template
4.1
	+ Increase uwsgi read timeout from 60 (default) to 180 seconds
	+ Update version to 4.1
	+ Remove deprecated Summarized report column in Logs page
	+ Removed support for SSLv2 & SSLv3. Using recommended ciphers from:
	  https://wiki.mozilla.org/Security/Server_Side_TLS
	  (contribution by theodorerambert)
4.0.6
	+ Fix remoteservices username/email migration when upgrading from 3.2
4.0.5
	+ Enable sending crash report with no debug mode
4.0.4
	+ Added subscription migration when upgrading from 3.2
	+ Manage correctly internal errors in data table controller
4.0.3
	+ More robust management of administration user accounts
	+ Fix not defined domain in log's ConfigureLogs model
	+ When unsubscribing remove extra packages before saving changes
	+ Better check of versions numbers in backup restore
	+ Make EBox::MyDBEngine more reusable
	+ Modify webadmin service when upgrading from 3.2
	+ Show enable errors in module status table
4.0.2
	+ Remove incorrect directory not exists warnings
	+ Crash reports can be submitted also with global debug disabled
4.0.1
	+ Save changes does redirection after 10 consecutive failed requests
	+ Hide useless revoke button in OpenChange vdomains table
4.0