@@ -1,3 +1,5 @@
+HEAD
+	+ Prevent upgrade on unsupported 32bit installations
 4.1.8
 	+ Upgrade kernel also when upgrading to 4.2
 4.1.7
